[bdist_wheel]
universal = 1

[metadata]
name = markmoji
version = 1.1
license_file = LICENSE
author = Todd Parsons
author_email = todd.e.parsons@gmail.com
maintainer_email = todd.e.parsons@gmail.com
url = https://TEParsons.github.io/Markmoji
download_url = https://github.com/TEParsons/Markmoji/archive/refs/tags/v1.1.tar.gz
description = Extends the basic markdown syntax using an easy to understand and quickly readable emoji-based syntax.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
install_requires = 
    markdown
    emoji
    requests
    validators
[options.extras_require]
suggested = 
    pybtex
